Fixed horizontal scrollbar showing up when there was nothing to scroll.

--- a/tribeca-web/public/stylesheets/custom.css
+++ b/tribeca-web/public/stylesheets/custom.css
@@ -418,6 +418,7 @@ body.error-page .message {
     width: 100%;
     height: 75px;
     overflow: scroll;
+    overflow-x: hidden;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
     padding: 5px;
